--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
         <section id="content" class=" flex-[50%] flex flex-col">
 
-            <div class="flex flex-col border-[1px] w-[400px] items-center justify-center mt-10 ml-5">
+            <div class="flex flex-col border-[1px] border-gray-300 w-[400px] items-center justify-center mt-10 ml-5">
                 <h1 id="logo" class="pt-14"><img src="img/logo-black.png" alt=""></h1>
 
                 <form class="flex flex-col items-center justify-center pt-8 gap-1.5" action="" method="post">
@@ -81,7 +81,7 @@
 
             </div>
 
-            <div id="subscribe" class="w-[400px] border-[1px] ml-5 mt-3 py-5 text-sm flex items-center justify-center">
+            <div id="subscribe" class="w-[400px] border-[1px] border-gray-300 ml-5 mt-3 py-5 text-sm flex items-center justify-center">
                 <span>
                     Você não tem uma conta?
                     <a class="cursor-pointer text-azul-claro font-bold" href="#">
